--- a/de/index.html
+++ b/de/index.html
@@ -32,7 +32,7 @@
 </head>
 <body>
 
-  <img src="/repo/images/main-12.gif" alt="Bearplane-Logo" class="hero-gif">
+  <img src="/atomicmills-site/images/main-12.gif" alt="Bearplane-Logo" class="hero-gif">
 
   <div class="section">
     <div class="trailer-button">
@@ -45,33 +45,33 @@
       Demnächst erhältlich auf:
     </p>
     <div class="store-buttons">
-      <a href="https://store.steampowered.com/app/3370980" target="_blank"><img src="/repo/steam-badge.png" alt="Steam" /></a>
-      <a href="https://apps.apple.com/app/id6456222792" target="_blank"><img src="/repo/ios-app-store-badge.png" alt="App Store" /></a>
-      <a href="https://play.google.com/store/apps/details?id=com.MatthewBurton.BearPlane" target="_blank"><img src="/repo/google-play-badge.png" alt="Google Play" /></a>
+      <a href="https://store.steampowered.com/app/3370980" target="_blank"><img src="/atomicmills-site/steam-badge.png" alt="Steam" /></a>
+      <a href="https://apps.apple.com/app/id6456222792" target="_blank"><img src="/atomicmills-site/ios-app-store-badge.png" alt="App Store" /></a>
+      <a href="https://play.google.com/store/apps/details?id=com.MatthewBurton.BearPlane" target="_blank"><img src="/atomicmills-site/google-play-badge.png" alt="Google Play" /></a>
     </div>
   </div>
 
   <div class="section">
     <h2>Rammen! Rösten! Brüllen! Der Sieg wartet!</h2>
-    <img src="/repo/ram-roast-roar-gif.gif" alt="Gameplay-GIF" class="gif">
+    <img src="/atomicmills-site/ram-roast-roar-gif.gif" alt="Gameplay-GIF" class="gif">
     <p>Regne himmlische Gerechtigkeit herab! Ramme feindliche Flugzeuge zu Schrott, röste Bösewichte in der Luft mit lodernden Jetflammen oder brülle so laut, dass Piloten aus ihren Cockpits geschleudert werden. Die Lüfte werden nie wissen, was sie getroffen hat.</p>
   </div>
 
   <div class="section">
     <h2>Rüste dich aus, stärke dich und präge dein Image!</h2>
-    <img src="/repo/800px-hats.gif" alt="Ausrüstungs-GIF" class="gif">
+    <img src="/atomicmills-site/800px-hats.gif" alt="Ausrüstungs-GIF" class="gif">
     <p>Jeder Held braucht Arsenal... und Stil! Statte dich mit Bazookas, Jagdspeeren und anderen wilden Waffen der Zerstörung aus. Kröne dein Outfit mit taktischen Hüten, die Ruhm versprechen. Manche Hüte verstärken deine Waffen, andere verschaffen dir Vorteile bei bestimmten Wetterbedingungen. Die richtige Kombination macht dich zur fliegenden Festung!</p>
   </div>
 
   <div class="section">
     <h2>Von den Machern des weltweit ersten Atomfrühstücks</h2>
-    <img src="/repo/atomic-mills-powers-gif.gif" alt="Atomic Mills-GIF" class="gif">
+    <img src="/atomicmills-site/atomic-mills-powers-gif.gif" alt="Atomic Mills-GIF" class="gif">
     <p>Verschlinge Flappy Flakes, nippe an Nukey Nectar und knack eine Flasche Honey Thunder Cola. Diese streng geheimen Nährstoff-Wunder verleihen dir Blitzgeschwindigkeit, flatternden Flug und rohe Kraft. Nebenwirkungen: mögliche totale Dominanz.</p>
   </div>
 
   <div class="section">
     <h2>Koop-Chaos</h2>
-    <img src="/repo/800px-co-op.gif" alt="Koop-GIF" class="gif">
+    <img src="/atomicmills-site/800px-co-op.gif" alt="Koop-GIF" class="gif">
     <p>Greif zum Controller und hol dir einen Copiloten! Spieler 2 schlüpft in die Rolle von Rifle Rat, deinem bewaffneten Sidekick. Schließt euch zusammen, verdoppelt eure Feuerkraft und befreit mit jeder Explosion die Freiheit.</p>
   </div>
 
@@ -94,10 +94,10 @@
       <p>Atomic Mills ist das (rein fiktive) Unternehmen hinter kühnen Kriegsernährungs-Favoriten wie <em>Nukey Nectar</em>, <em>Honey Thunder Cola</em> und <em>Flappy Flakes Breakfast Cereal</em>. Gegründet während des Höhepunkts des Zweiten Weltkriegs, nutzte Atomic Mills die grenzenlose Kraft der Kernenergie und hart arbeitender radioaktiver Bienen, um unseren tapferen Soldaten einen nahrhaften Vorteil auf dem Schlachtfeld zu verschaffen.</p>
       <p>Angetrieben von Patriotismus und einem verdächtigen orangefarbenen Schimmer lieferte Atomic Mills in jedem Bissen explosiven Geschmack und fragwürdige Wissenschaft.</p>
       <div class="atomic-images">
-        <img src="/repo/nn-jar.png" alt="Nukey Nectar">
-        <img src="/repo/ht-bottle.png" alt="Honey Thunder Cola">
-        <img src="/repo/ff-box.png" alt="Flappy Flakes">
-        <img src="/repo/ht-matt.png" alt="Honey Thunder Gym">
+        <img src="/atomicmills-site/nn-jar.png" alt="Nukey Nectar">
+        <img src="/atomicmills-site/ht-bottle.png" alt="Honey Thunder Cola">
+        <img src="/atomicmills-site/ff-box.png" alt="Flappy Flakes">
+        <img src="/atomicmills-site/ht-matt.png" alt="Honey Thunder Gym">
       </div>
     </div>
     <div class="faq-item">
@@ -155,7 +155,7 @@
     </div>
     <div class="faq-item">
       <h3>Wo finde ich Datenschutzrichtlinie und Nutzungsbedingungen?</h3>
-      <p>Alle rechtlichen Dokumente, einschließlich unserer Datenschutzrichtlinie und Nutzungsbedingungen, findest du auf unserer <a href="/repo/legal.html">Legal</a>-Seite.</p>
+      <p>Alle rechtlichen Dokumente, einschließlich unserer Datenschutzrichtlinie und Nutzungsbedingungen, findest du auf unserer <a href="/atomicmills-site/legal.html">Legal</a>-Seite.</p>
     </div>
     <div class="faq-item">
       <h3>Matt, kann ich dir einen Kaffee ausgeben?</h3>
