--- a/fr/index.html
+++ b/fr/index.html
@@ -246,7 +246,7 @@
 </head>
 <body>
 
-  <img src="/repo/images/main-12.gif" alt="Logo Bearplane" class="hero-gif">
+  <img src="/atomicmills-site/images/main-12.gif" alt="Logo Bearplane" class="hero-gif">
 
   <div class="section">
     <div class="trailer-button">
@@ -263,38 +263,38 @@
 
     <div class="store-buttons">
       <a href="https://store.steampowered.com/app/3370980" target="_blank">
-        <img src="/repo/steam-badge.png" alt="Steam" />
+        <img src="/atomicmills-site/steam-badge.png" alt="Steam" />
       </a>
       <a href="https://apps.apple.com/app/id6456222792" target="_blank">
-        <img src="/repo/ios-app-store-badge.png" alt="App Store" />
+        <img src="/atomicmills-site/ios-app-store-badge.png" alt="App Store" />
       </a>
       <a href="https://play.google.com/store/apps/details?id=com.MatthewBurton.BearPlane" target="_blank">
-        <img src="/repo/google-play-badge.png" alt="Google Play" />
+        <img src="/atomicmills-site/google-play-badge.png" alt="Google Play" />
       </a>
     </div>
   </div>
   
   <div class="section">
     <h2>Percutez ! Rôtissez ! Rugissez ! La victoire vous attend !</h2>
-    <img src="/repo/ram-roast-roar-gif.gif" alt="GIF de gameplay" class="gif">
+    <img src="/atomicmills-site/ram-roast-roar-gif.gif" alt="GIF de gameplay" class="gif">
     <p>Déchaînez la justice céleste ! Percutez les avions ennemis en morceaux, rôtissez vos adversaires en plein vol avec vos flammes propulsées ou poussez un rugissement tonitruant qui expulse les pilotes hors de leur cockpit. Les cieux ne sauront pas ce qui les a frappés.</p>
   </div>
 
   <div class="section">
     <h2>Équipez-vous, renforcez-vous et faites sensation !</h2>
-    <img src="/repo/800px-hats.gif" alt="GIF de sélection d’équipement" class="gif">
+    <img src="/atomicmills-site/800px-hats.gif" alt="GIF de sélection d’équipement" class="gif">
     <p>Tout héros se doit d’avoir un arsenal... et du style ! Équipez-vous de bazookas, de lances de joute et d’autres armes de destruction aérienne. Puis coiffez-vous d’un chapeau tactique conçu pour la gloire. Certains chapeaux boostent vos armes, d’autres vous donnent un avantage par temps capricieux. La bonne combinaison fait de vous une forteresse volante !</p>
   </div>
 
   <div class="section">
     <h2>Des créateurs du tout premier petit-déjeuner atomique</h2>
-    <img src="/repo/atomic-mills-powers-gif.gif" alt="GIF d’Atomic Mills" class="gif">
+    <img src="/atomicmills-site/atomic-mills-powers-gif.gif" alt="GIF d’Atomic Mills" class="gif">
     <p>Croquez les Flappy Flakes, sirotez le Nukey Nectar et débouchez une bouteille de Honey Thunder Cola. Ces découvertes nutritionnelles ultra-secrètes vous offrent vitesse fulgurante, envolée battante et force brute. Effets secondaires possibles : domination totale.</p>
   </div>
 
   <div class="section">
     <h2>Chaos en coop</h2>
-    <img src="/repo/800px-co-op.gif" alt="GIF de coopération" class="gif">
+    <img src="/atomicmills-site/800px-co-op.gif" alt="GIF de coopération" class="gif">
     <p>Prenez une manette et engagez un copilote ! Le joueur 2 incarne Rocket Rat, votre acolyte armé. Unissez vos forces, doublez votre puissance de feu et libérez la liberté une explosion après l’autre.</p>
   </div>
 
@@ -320,10 +320,10 @@
     <p>C’est la société d’alimentation et de boissons la plus avant-gardiste de cette époque ! Atomic Mills est le fabricant (entièrement fictif) des favoris de guerre tels que <em>Nukey Nectar</em>, <em>Honey Thunder Cola</em> et <em>Flappy Flakes Breakfast Cereal</em>. Fondée pendant l’âge d’or de la Seconde Guerre mondiale, Atomic Mills exploitait le potentiel infini de l’énergie nucléaire et le travail acharné d’abeilles radioactives pour offrir à nos braves soldats un avantage nutritionnel sur le champ de bataille.</p>
     <p>Animée par le patriotisme et une lueur orange suspecte, Atomic Mills livrait une saveur explosive et une science pour le moins discutable à chaque bouchée.</p>
     <div class="atomic-images">
-      <img src="/repo/nn-jar.png" alt="Nukey Nectar" />
-      <img src="/repo/ht-bottle.png" alt="Honey Thunder Cola" />
-      <img src="/repo/ff-box.png" alt="Flappy Flakes" />
-      <img src="/repo/ht-matt.png" alt="Honey Thunder Gym" />
+      <img src="/atomicmills-site/nn-jar.png" alt="Nukey Nectar" />
+      <img src="/atomicmills-site/ht-bottle.png" alt="Honey Thunder Cola" />
+      <img src="/atomicmills-site/ff-box.png" alt="Flappy Flakes" />
+      <img src="/atomicmills-site/ht-matt.png" alt="Honey Thunder Gym" />
     </div>
   </div>
 
