--- a/de/index.html
+++ b/de/index.html
@@ -32,7 +32,7 @@
 </head>
 <body>
 
-  <img src="atomicmills-site/images/main-12.gif" alt="Bearplane-Logo" class="hero-gif">
+  <img src="/images/main-12.gif" alt="Bearplane-Logo" class="hero-gif">
 
   <div class="section">
     <div class="trailer-button">
