--- a/es/index.html
+++ b/es/index.html
@@ -48,7 +48,7 @@
 </head>
 <body>
 
-  <img src="/atomicmills-site/images/main-12.gif" alt="Logotipo de Bearplane" class="hero-gif">
+  <img src="/images/main-12.gif" alt="Logotipo de Bearplane" class="hero-gif">
 
   <div class="section">
     <div class="trailer-button">
@@ -63,33 +63,33 @@
     </p>
 
     <div class="store-buttons">
-      <a href="https://store.steampowered.com/app/3370980" target="_blank"><img src="/atomicmills-site/steam-badge.png" alt="Steam"></a>
-      <a href="https://apps.apple.com/app/id6456222792" target="_blank"><img src="/atomicmills-site/ios-app-store-badge.png" alt="App Store"></a>
-      <a href="https://play.google.com/store/apps/details?id=com.MatthewBurton.BearPlane" target="_blank"><img src="/atomicmills-site/google-play-badge.png" alt="Google Play"></a>
+      <a href="https://store.steampowered.com/app/3370980" target="_blank"><img src="/steam-badge.png" alt="Steam"></a>
+      <a href="https://apps.apple.com/app/id6456222792" target="_blank"><img src="/ios-app-store-badge.png" alt="App Store"></a>
+      <a href="https://play.google.com/store/apps/details?id=com.MatthewBurton.BearPlane" target="_blank"><img src="/google-play-badge.png" alt="Google Play"></a>
     </div>
   </div>
 
   <div class="section">
     <h2>¡Embiste! ¡Asa! ¡Ruge! ¡La victoria te espera!</h2>
-    <img src="/atomicmills-site/ram-roast-roar-gif.gif" alt="GIF de juego" class="gif">
+    <img src="/ram-roast-roar-gif.gif" alt="GIF de juego" class="gif">
     <p>¡Llueve justicia desde lo alto! Embiste a las aeronaves enemigas convirtiéndolas en chatarra, asa a los malos en pleno vuelo con tus llamas propulsadas o suelta un rugido atronador que expulsa a los enemigos de sus cabinas. Nadie en los cielos sabrá lo que les golpeó.</p>
   </div>
 
   <div class="section">
     <h2>¡Equípate, poténciate y hazte notar!</h2>
-    <img src="/atomicmills-site/800px-hats.gif" alt="GIF de equipamiento" class="gif">
+    <img src="/800px-hats.gif" alt="GIF de equipamiento" class="gif">
     <p>¡Todo héroe necesita un arsenal... y estilo! Equipa bazucas, lanzas de justas y otras armas salvajes de destrucción aérea. Luego complétalo con un sombrero táctico diseñado para la gloria. Algunos sombreros potencian tus armas, otros te dan ventaja según el clima. ¡La combinación adecuada te convierte en una fortaleza voladora!</p>
   </div>
 
   <div class="section">
     <h2>De los creadores del primer desayuno atómico del mundo</h2>
-    <img src="/atomicmills-site/atomic-mills-powers-gif.gif" alt="GIF de Atomic Mills" class="gif">
+    <img src="/atomic-mills-powers-gif.gif" alt="GIF de Atomic Mills" class="gif">
     <p>Devora Flappy Flakes, bebe Nukey Nectar y abre una botella de Honey Thunder Cola. Estos avances nutricionales ultrasecretos te brindan velocidad explosiva, vuelo aleteante y fuerza bruta. Efectos secundarios posibles: dominación total.</p>
   </div>
 
   <div class="section">
     <h2>Caos cooperativo</h2>
-    <img src="/atomicmills-site/800px-co-op.gif" alt="GIF de cooperativo" class="gif">
+    <img src="/800px-co-op.gif" alt="GIF de cooperativo" class="gif">
     <p>¡Toma un mando y recluta a un copiloto! El jugador 2 controla a Rocket Rat, tu compañero armado. Unan fuerzas, dupliquen su potencia de fuego y liberen la libertad una explosión tras otra.</p>
   </div>
 
@@ -115,10 +115,10 @@
       <p>¡Es la compañía de alimentos y bebidas más vanguardista de la época! Atomic Mills es el fabricante (totalmente ficticio) detrás de favoritos de guerra como <em>Nukey Nectar</em>, <em>Honey Thunder Cola</em> y <em>Flappy Flakes Breakfast Cereal</em>. Fundada durante la Segunda Guerra Mundial, Atomic Mills aprovechó el poder nuclear y el trabajo de abejas radioactivas para ofrecer a nuestros héroes un impulso nutricional.</p>
       <p>Impulsada por el patriotismo y un resplandor naranja sospechoso, Atomic Mills entregaba sabor explosivo y ciencia cuestionable en cada bocado.</p>
       <div class="atomic-images">
-        <img src="/atomicmills-site/nn-jar.png" alt="Nukey Nectar">
-        <img src="/atomicmills-site/ht-bottle.png" alt="Honey Thunder Cola">
-        <img src="/atomicmills-site/ff-box.png" alt="Flappy Flakes">
-        <img src="/atomicmills-site/ht-matt.png" alt="Honey Thunder Gym">
+        <img src="/nn-jar.png" alt="Nukey Nectar">
+        <img src="/ht-bottle.png" alt="Honey Thunder Cola">
+        <img src="/ff-box.png" alt="Flappy Flakes">
+        <img src="/ht-matt.png" alt="Honey Thunder Gym">
       </div>
     </div>
 
