--- a/fr/index.html
+++ b/fr/index.html
@@ -344,18 +344,18 @@
   </div>
 
   <div class="faq-item">
-    <h3>Quelle est la différence entre les versions Steam et mobile de Bearplane ?</h3>
-    <p>Le cœur du jeu reste identique, mais quelques différences :</p>
+    <h3>Quelle est la différence entre les versions Steam et mobile de Bearplane ?</h3>
+    <p>Le cœur du jeu reste identique, mais quelques différences :</p>
     <ul>
-      <li><strong>Version Steam :</strong> achat unique à 4,99 $ pour déverrouiller l’expérience complète. Aucune microtransaction.</li>
-      <li><strong>Version mobile :</strong> gratuite au départ. Vous pouvez débloquer le jeu complet pour 4,99 $, ce qui inclut :</li>
+      <li><strong>Version Steam :</strong> achat unique pour déverrouiller l’expérience complète. Aucune microtransaction.</li>
+      <li><strong>Version mobile :</strong> gratuite au départ. Vous pouvez débloquer le jeu complet via un achat unique, ce qui inclut :</li>
       <ul>
         <li>Une garde-robe de <strong>chapeaux spéciaux</strong> aux pouvoirs uniques</li>
         <li><strong>Double récompense</strong> pour les missions (Flappy Flakes, Nukey Nectar, etc.)</li>
         <li>La possibilité de <strong>passer des missions</strong></li>
         <li>Accès aux <strong>classements et succès</strong></li>
-        <li><strong>10 % de sang cartoon en plus</strong> (de rien)</li>
-        <li><strong>Bonus :</strong> branchez une manette et jouez Rocket Rat, Bearplane attaquant automatiquement !</li>
+        <li><strong>10 % de sang cartoon en plus</strong> (de rien)</li>
+        <li><strong>Bonus :</strong> branchez une manette et jouez Rocket Rat, Bearplane attaquant automatiquement !</li>
       </ul>
     </ul>
   </div>
