--- a/es/index.html
+++ b/es/index.html
@@ -155,18 +155,18 @@
     </div>
 
     <div class="faq-item">
-      <h3>¿Cuál es la diferencia entre las versiones de Steam y móvil de Bearplane?</h3>
-      <p>La jugabilidad principal es la misma, pero hay algunas diferencias clave:</p>
+      <h3>¿Cuál es la diferencia entre las versiones de Bearplane en Steam y móvil?</h3>
+      <p>El núcleo del juego es idéntico, pero hay algunas diferencias:</p>
       <ul>
-        <li><strong>Versión Steam:</strong> compra única de $4,99 para desbloquear toda la experiencia. Sin compras dentro de la aplicación.</li>
-        <li><strong>Versión móvil:</strong> gratuita para empezar. Puedes desbloquear el juego completo por $4,99, que incluye:</li>
+        <li><strong>Versión Steam:</strong> compra única para desbloquear la experiencia completa. Sin micropagos.</li>
+        <li><strong>Versión móvil:</strong> gratuita al principio. Puedes desbloquear el juego completo mediante una compra única, que incluye:</li>
         <ul>
-          <li>Un guardarropa de <strong>sombreros especiales</strong> con habilidades únicas</li>
-          <li><strong>Doble recompensa</strong> en misiones (Flappy Flakes, Nukey Nectar, etc.)</li>
-          <li>La posibilidad de <strong>omitir misiones</strong></li>
-          <li>Acceso a <strong>clasificaciones y logros</strong></li>
-          <li><strong>10 % más de sangre caricaturesca</strong> (de nada)</li>
-          <li><strong>Bonus:</strong> conecta un mando y juega como Rocket Rat mientras Bearplane sigue y ataca automáticamente.</li>
+          <li>Un armario de <strong>sombreros especiales</strong> con poderes únicos</li>
+          <li><strong>Doble recompensa</strong> por las misiones (Flappy Flakes, Nukey Nectar, etc.)</li>
+          <li>La posibilidad de <strong>saltar misiones</strong></li>
+          <li>Acceso a las <strong>clasificaciones y logros</strong></li>
+          <li><strong>10 % más de sangre caricaturesca</strong> (de nada)</li>
+          <li><strong>Bonus:</strong> conecta un mando y juega a Rocket Rat; ¡Bearplane atacará automáticamente!</li>
         </ul>
       </ul>
     </div>
