--- a/de/index.html
+++ b/de/index.html
@@ -130,19 +130,19 @@
       <p>Die Controller-Belegung wird automatisch erkannt. Falls nicht, empfehlen wir im Steam Deck-Menü den Layout-Typ "Gamepad" auszuwählen.</p>
     </div>
     <div class="faq-item">
-      <h3>Was ist der Unterschied zwischen der Steam- und der Mobilversion?</h3>
-      <p>Das Kern-Gameplay ist identisch, aber es gibt einige Unterschiede:</p>
+      <h3>Was ist der Unterschied zwischen der Steam- und der mobilen Version von Bearplane?</h3>
+      <p>Der Spielkern bleibt identisch, aber es gibt einige Unterschiede:</p>
       <ul>
-        <li><strong>Steam-Version:</strong> Einmaliger Kauf von 4,99 $ für das vollständige Erlebnis. Keine In-App-Käufe.</li>
-        <li><strong>Mobilversion:</strong> Kostenloser Einstieg, Vollversion freischaltbar für 4,99 $, inkl.:</li>
-          <ul>
-            <li><strong>Spezielle Hüte</strong> mit einzigartigen Fähigkeiten</li>
-            <li><strong>Doppelte Belohnungen</strong> in Missionen (Flappy Flakes, Nukey Nectar etc.)</li>
-            <li><strong>Mission überspringen</strong>-Option</li>
-            <li>Zugriff auf <strong>Ranglisten und Erfolge</strong></li>
-            <li><strong>10 % mehr Cartoon-Blut</strong> (bitte sehr!)</li>
-            <li><strong>Bonus:</strong> Rocket Rat im Koop, während Bearplane selbstständig angreift.</li>
-          </ul>
+        <li><strong>Steam-Version:</strong> Einmalkauf zum Freischalten des kompletten Spiels. Keine Mikrotransaktionen.</li>
+        <li><strong>Mobile-Version:</strong> zunächst kostenlos. Du kannst das komplette Spiel per Einmalkauf freischalten, das Folgendes umfasst:</li>
+        <ul>
+          <li>Eine Garderobe mit <strong>speziellen Hüten</strong> mit einzigartigen Kräften</li>
+          <li><strong>Doppelte Belohnung</strong> für Missionen (Flappy Flakes, Nukey Nectar etc.)</li>
+          <li>Möglichkeit, <strong>Missionen zu überspringen</strong></li>
+          <li>Zugriff auf <strong>Ranglisten und Erfolge</strong></li>
+          <li><strong>10 % mehr Cartoon-Blut</strong> (gern geschehen)</li>
+          <li><strong>Bonus:</strong> Schließe einen Controller an und spiele Rocket Rat – Bearplane greift automatisch an!</li>
+        </ul>
       </ul>
     </div>
     <div class="faq-item">
