--- a/ja/index.html
+++ b/ja/index.html
@@ -1,1 +1,219 @@
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+  <meta charset="UTF-8">
+  <title>Bearplane | Atomic Mills</title>
+  <style>
+    body { background: #fffbe6; font-family: monospace; text-align: center; padding: 0; margin: 0; font-size: 12px; }
+    @media (max-aspect-ratio: 1/1) { body { font-size: 12px; } }
+    @media (min-aspect-ratio: 1/1) { body { font-size: 16px; } }
+    h1, h2 { color: darkred; }
+    .logo { max-width: 300px; margin-bottom: 20px; }
+
+    .hero-gif {
+      width: 100%;
+      max-width: 800px;
+      margin: 0 auto;
+      display: block;
+    }
+    
+    @media (max-aspect-ratio: 50/49) {
+      .hero-gif {
+        width: 100vw;
+        max-width: none;
+        margin: 0;
+      }
+    }
+
+    .section { max-width: 800px; margin: 40px auto; text-align: left; }
+    .section h2 { border-bottom: 2px solid darkred; padding-bottom: 5px; }
+    .gif { width: 100%; max-width: 800px; display: block; margin: 20px auto; }
+    .faq { background: #fdf7db; padding: 20px; border: 1px solid #e6d9a8; max-width: 800px; margin: 40px auto; box-sizing: border-box; }
+    .faq h3 { color: darkred; }
+    .faq-item { margin-bottom: 20px; }
+    .faq-item p { margin: 5px 0; }
+    a { color: darkred; text-decoration: underline; font-weight: bold; }
+    .trailer-button { text-align: center; margin-bottom: 20px; }
+    .btn { display: inline-flex; align-items: center; justify-content: center; background-color: darkred; color: white; padding: 15px 40px; font-weight: bold; font-size: 1.4em; text-decoration: none; border-radius: 8px; transition: background-color 0.2s ease, transform 0.2s ease, box-shadow 0.2s ease; gap: 10px; }
+    .btn:hover { background-color: #a00; transform: scale(1.05); box-shadow: 0 4px 12px rgba(0,0,0,0.2); }
+    .store-buttons { display: flex; justify-content: center; gap: 10px; margin-top: 20px; flex-wrap: wrap; }
+    .store-buttons img { height: 76px; max-width: 262px; object-fit: contain; transition: transform 0.2s ease, box-shadow 0.2s ease; }
+    .store-buttons img:hover { transform: scale(1.05); box-shadow: 0 4px 12px rgba(0,0,0,0.2); }
+    .atomic-images { display: flex; justify-content: center; gap: 20px; margin-top: 10px; flex-wrap: wrap; }
+    .atomic-images img { width: 140px; height: 140px; object-fit: cover; border-radius: 8px; transition: transform 0.2s ease; cursor: pointer; }
+    .atomic-images img:hover { transform: scale(1.05); }
+    .lightbox-overlay { position: fixed; top: 0; left: 0; width: 100vw; height: 100vh; background: rgba(0,0,0,0.85); display: none; justify-content: center; align-items: center; z-index: 9999; }
+    .lightbox-overlay img { max-width: 90%; max-height: 90%; border-radius: 8px; }
+  </style>
+</head>
+<body>
+
+  <img src="/images/main-12.gif" alt="Bearplane ロゴ" class="hero-gif">
+
+  <div class="section">
+    <div class="trailer-button">
+      <a href="https://youtu.be/3JW6-kAru64" class="btn" target="_blank">▶ トレーラーを見る</a>
+    </div>
+    <p class="intro-paragraph">
+      <em><strong>ロケット駆動のクマとなって空を駆ける『Bearplane』：ウオイテク伝説に自由にインスパイアされた、ド派手でアクション満載のアドベンチャー。狂気のスキル、核スナック、空の大混乱で狡猾な敵を打ち倒せ。</strong></em>
+    </p>
+    <p id="coming-soon-text" style="text-align:center; font-weight:bold; font-size:1.3em; color:darkred; margin-bottom:5px;">
+      近日配信予定：
+    </p>
+    <div class="store-buttons">
+      <a href="https://store.steampowered.com/app/3370980" target="_blank"><img src="/steam-badge.png" alt="Steam" /></a>
+      <a href="https://apps.apple.com/app/id6456222792" target="_blank"><img src="/ios-app-store-badge.png" alt="App Store" /></a>
+      <a href="https://play.google.com/store/apps/details?id=com.MatthewBurton.BearPlane" target="_blank"><img src="/google-play-badge.png" alt="Google Play" /></a>
+    </div>
+  </div>
+
+  <div class="section">
+    <h2>ぶつけろ！焼き尽くせ！吠えろ！勝利は君のもの！</h2>
+    <img src="/ram-roast-roar-gif.gif" alt="ゲームプレイ GIF" class="gif">
+    <p>天誅（てんちゅう）を下せ！敵機を粉々にぶつけ、推進火炎で空中の敵を焼き尽くし、轟音の咆哮でパイロットをコックピットから吹き飛ばせ。空はもう平穏ではない。</p>
+  </div>
+
+  <div class="section">
+    <h2>装備し、強化し、魅せつけろ！</h2>
+    <img src="/800px-hats.gif" alt="装備選択 GIF" class="gif">
+    <p>ヒーローたるもの武装とスタイルは必須！バズーカやジャベリンなどの空中兵器を携え、戦術帽を被ろう。武器強化型、悪天候耐性型など様々。最適な組み合わせで空飛ぶ要塞になれ！</p>
+  </div>
+
+  <div class="section">
+    <h2>世界初の“原子朝食”クリエイターより</h2>
+    <img src="/atomic-mills-powers-gif.gif" alt="Atomic Mills GIF" class="gif">
+    <p>Flappy Flakes をむさぼり、Nukey Nectar を飲み、Honey Thunder Cola の栓を抜け。極秘の栄養素が超高速移動、華麗な飛行、圧倒的パワーを与える。副作用：世界征服かも…？</p>
+  </div>
+
+  <div class="section">
+    <h2>協力プレイで大混乱</h2>
+    <img src="/800px-co-op.gif" alt="協力モード GIF" class="gif">
+    <p>コントローラーを手に取り、副操縦士を招集！プレイヤー2 は Rocket Rat、武装済みの相棒だ。火力二倍で爆発の嵐を巻き起こせ。</p>
+  </div>
+
+  <div class="section faq">
+    <h2>FAQ</h2>
+    <div class="faq-item">
+      <h3>『Bearplane』は実話が元になっている？</h3>
+      <p>その通り！<em>Bearplane</em>は第二次世界大戦でポーランド軍と共に戦った本物のクマ“ウオイテク”に自由にインスパイア。そこにジェットパックと狂気をプラス！</p>
+    </div>
+    <div class="faq-item">
+      <h3>開発はどのように進んだ？</h3>
+      <p><em>Bearplane</em>は2020年ロックダウン中に始動。旅も仕事もできない間にウオイテク伝説に没入し、ゲーム化を決意。</p>
+      <p>『Fallout』の陽気な40年代空間で繰り広げる過激戦闘、『Tom &amp; Jerry』の物理コメディ、『Skyrim』の咆哮…これらを融合。</p>
+      <p>2年間、動きとコアメカニクスを徹底的に研ぎ澄ませた。</p>
+      <p>2023年には作曲家 Sean Smith と組み、ビッグバンドサウンドトラックを本物のジャズバンドで録音。アーティストLeo Siebert、Jordan Wadell、Vinnie Petersがビジュアルを完成させ、結果は大成功。</p>
+      <p>合計7000時間以上（それ以上のコーヒー）を注ぎ込み、この狂気をゲームに昇華。</p>
+    </div>
+    <div class="faq-item">
+      <h3>Atomic Mills とは？</h3>
+      <p>Atomic Mills は架空の企業で、戦場で人気のNukey Nectar、Honey Thunder Cola、Flappy Flakesを開発。第二次大戦期に核エネルギーと放射性ミツバチを活用し、兵士に栄養優位をもたらした。</p>
+      <p>愛国心と謎のオレンジ光に突き動かされ、爆発的な美味と…怪しげな科学を提供。</p>
+      <div class="atomic-images">
+        <img src="/nn-jar.png" alt="Nukey Nectar">
+        <img src="/ht-bottle.png" alt="Honey Thunder Cola">
+        <img src="/ff-box.png" alt="Flappy Flakes">
+        <img src="/ht-matt.png" alt="Honey Thunder Gym">
+      </div>
+    </div>
+    <div class="faq-item">
+      <h3>シングルプレイ？それともマルチプレイ？</h3>
+      <p>どちらも！ソロ飛行も、コントローラー接続でローカル協力プレイも可能。プレイヤー2はRocket Rat、共に火力二倍！</p>
+    </div>
+    <div class="faq-item">
+      <h3>対応デバイスと操作方法は？</h3>
+      <p>モバイル：タッチ or コントローラー。PC：マウス、キーボード or コントローラー。Steam Deckでも快適プレイ。</p>
+    </div>
+    <div class="faq-item">
+      <h3>Steam Deckで動く？</h3>
+      <p>もちろん！90FPSで超快適。PC版はSteam Deck向けに最適化済み。</p>
+      <p>コントローラー自動認識。必要なら設定で「Gamepad」レイアウトを選択。</p>
+    </div>
+    <div class="faq-item">
+      <h3>Steam版とモバイル版の違いは？</h3>
+      <p>基本は同じだが：</p>
+      <ul>
+        <li><strong>Steam：</strong>一括購入で全解放、マイクロトランザクションなし。</li>
+        <li><strong>モバイル：</strong>無料で入手後、一括購入で完全版を解放。内容：</li>
+        <ul>
+          <li>ユニーク能力を持つ<strong>特殊帽子</strong>セット</li>
+          <li>ミッション報酬<strong>二倍</strong></li>
+          <li>ミッション<strong>スキップ</strong>機能</li>
+          <li>ランキング &amp; 実績へのアクセス</li>
+          <li>カートゥーン血液+10%</li>
+          <li><strong>ボーナス：</strong>コントローラー接続でRocket Rat操作、Bearplane自動攻撃！</li>
+        </ul>
+      </ul>
+    </div>
+    <div class="faq-item">
+      <h3>モバイルで完全版を解放するには？</h3>
+      <p>メインメニューで「完全版を購入」をタップすると全ボーナスをアンロック。</p>
+    </div>
+    <div class="faq-item">
+      <h3>オフラインで遊べる？</h3>
+      <p>はい！Wi-Fi不要、制限なくプレイ可能。</p>
+    </div>
+    <div class="faq-item">
+      <h3>今後アップデートは？</h3>
+      <p>もちろん！毎月、新帽子やモード、サプライズを配信予定。</p>
+    </div>
+    <div class="faq-item">
+      <h3>デバイス間で進行度は同期できる？</h3>
+      <p>まだ未対応ですが、クラウド同期機能を開発中。</p>
+    </div>
+    <div class="faq-item">
+      <h3>子供向け？</h3>
+      <p><em>Bearplane</em>にはカートゥーン暴力、手足切断、血液表現あり。保護者の監督推奨。</p>
+    </div>
+    <div class="faq-item">
+      <h3>他言語対応？</h3>
+      <p>完全版は英語ですが、Rocket Ratのダイアログとチュートリアルは他8言語にローカライズ。</p>
+    </div>
+    <div class="faq-item">
+      <h3>プライバシーポリシーと利用規約は？</h3>
+      <p>法的ドキュメントはすべて<a href="/legal.html">Legal</a>ページに掲載。</p>
+    </div>
+    <div class="faq-item">
+      <h3>Mattにコーヒーを奢れる？</h3>
+      <p>もちろん！<em>Bearplane</em>で笑顔や興奮をもらったら、次のコーディングにコーヒーを：<br><a href="https://buymeacoffee.com/burtbot" target="_blank">coff.ee/burtbot</a></p>
+      <p>（心から感謝！）</p>
+    </div>
+    <div class="faq-item">
+      <h3>質問やフィードバックはどこに？</h3>
+      <p>ご意見お待ちしています！<a href="mailto:AtomicMills@aol.com">AtomicMills@aol.com</a>まで、または<a href="https://discord.gg/HK3xWJTdjc" target="_blank">Discord</a>でどうぞ。アイデア、バグ、クマジョーク…お聞かせください！</p>
+    </div>
+  </div>
+
+  <div class="footer-links" style="text-align:center; margin-top:2em;">
+    <a href="/">⌂ ホーム</a> |
+    <a href="/bearplane.html">English</a> |
+    <a href="/fr/">Français</a> |
+    <a href="/es/">Español</a> |
+    <a href="/de/">Deutsch</a> |
+    <a href="/it/">Italiano</a> |
+    <a href="/pt/">Português</a> |
+    <a href="/pl/">Polski</a> |
+    <a href="/zh/">简体中文</a> |
+    <a href="/ja/">日本語</a>
+  </div>
+
+  <div class="lightbox-overlay" id="lightbox">
+    <img src="" alt="拡大画像" id="lightbox-img">
+  </div>
+
+  <script>
+    const lightbox = document.getElementById("lightbox");
+    const lightboxImg = document.getElementById("lightbox-img");
+    document.querySelectorAll(".atomic-images img").forEach(img => img.addEventListener("click", () => {
+      lightboxImg.src = img.src;
+      lightbox.style.display = "flex";
+    }));
+    lightbox.addEventListener("click", () => {
+      lightbox.style.display = "none";
+      lightboxImg.src = "";
+    });
+  </script>
+
+</body>
+</html>
 
