--- a/bearplane.html
+++ b/bearplane.html
@@ -248,14 +248,11 @@
   <img src="images/main-12.gif" alt="Bearplane Logo" class="hero-gif">
 
   <div class="section">
-    <div class="trailer-button">
+    
+<!--     <div class="trailer-button">
       <a href="https://youtu.be/3JW6-kAru64" class="btn" target="_blank">▶ Watch the Trailer</a>
-    </div>
-  
-<!--     <p class="watch-trailer-link">
-      — <a href="https://youtu.be/3JW6-kAru64" target="_blank">Watch the Trailer</a> —
-    </p>
- -->
+    </div> -->
+
     <p class="intro-paragraph">
       <em><strong>Take to the skies as a rocket-powered bear in Bearplane: a whimsical, action-packed adventure loosely inspired by the legendary tale of Wojtek the Bear. Battle dastardly foes with outrageous abilities, nuclear-fused snacks, and a whole lot of midair mayhem.</strong></em>
     </p>
@@ -432,7 +429,7 @@
   <a href="/pl/">Polski</a> |
   <a href="/zh/">简体中文</a> |
   <a href="/ja/">日本語</a>
-  | <a href="https://drive.google.com/drive/folders/1frnhqy5XK2Sel6olELFOckkLg0NcYEWU?usp=sharing" target="_blank">Media Kit 🗂️</a>
+<!--   | <a href="https://drive.google.com/drive/folders/1frnhqy5XK2Sel6olELFOckkLg0NcYEWU?usp=sharing" target="_blank">Media Kit 🗂️</a> -->
 </div>
 
 <div class="lightbox-overlay" id="lightbox">
