--- a/fr/index.html
+++ b/fr/index.html
@@ -419,6 +419,7 @@
   <a href="/pl/">Polski</a> |
   <a href="/zh/">简体中文</a> |
   <a href="/ja/">日本語</a>
+<!--   | <a href="https://drive.google.com/drive/folders/1frnhqy5XK2Sel6olELFOckkLg0NcYEWU?usp=sharing" target="_blank">Media Kit 🗂️</a> -->
 </div>
 
 <div class="lightbox-overlay" id="lightbox">
