--- a/zh/index.html
+++ b/zh/index.html
@@ -51,9 +51,9 @@
   <img src="/images/main-12.gif" alt="Bearplane 标志" class="hero-gif">
 
   <div class="section">
-    <div class="trailer-button">
+<!--     <div class="trailer-button">
       <a href="https://youtu.be/3JW6-kAru64" class="btn" target="_blank">▶ 查看预告片</a>
-    </div>
+    </div> -->
     <p class="intro-paragraph">
       <em><strong>作为火箭驱动的熊，在《Bearplane》中翱翔天际：一场疯狂刺激的冒险，灵感来源于传奇熊伍伊泰克的故事。用疯狂技能、核能小吃和空中混战击败狡猾敌人。</strong></em>
     </p>
