--- a/de/index.html
+++ b/de/index.html
@@ -51,9 +51,9 @@
   <img src="/images/main-12.gif" alt="Bearplane-Logo" class="hero-gif">
 
   <div class="section">
-    <div class="trailer-button">
+<!--     <div class="trailer-button">
       <a href="https://youtu.be/3JW6-kAru64" class="btn" target="_blank">▶ Trailer ansehen</a>
-    </div>
+    </div> -->
     <p class="intro-paragraph">
       <em><strong>Erkunde die Lüfte als raketengetriebener Bär in Bearplane: ein skurriles, actiongeladenes Abenteuer, lose inspiriert von der legendären Geschichte von Wojtek dem Bär. Bekämpfe hinterhältige Feinde mit verrückten Fähigkeiten, nuklearen Snacks und jeder Menge Chaos in der Luft.</strong></em>
     </p>
