--- a/es/index.html
+++ b/es/index.html
@@ -67,9 +67,9 @@
   <img src="/images/main-12.gif" alt="Logotipo de Bearplane" class="hero-gif">
 
   <div class="section">
-    <div class="trailer-button">
+<!--     <div class="trailer-button">
       <a href="https://youtu.be/3JW6-kAru64" class="btn" target="_blank">▶ Ver el tráiler</a>
-    </div>
+    </div> -->
     <p class="intro-paragraph">
       <em><strong>Emprende el vuelo a lomos de un oso cohete en <em>Bearplane</em>: una aventura desenfadada y llena de acción, inspirada libremente en la historia legendaria de Wojtek el Oso. Enfréntate a enemigos malvados con habilidades disparatadas, bocadillos con fusión nuclear y un caos aéreo total.</strong></em>
     </p>
