--- a/fr/index.html
+++ b/fr/index.html
@@ -249,9 +249,9 @@
   <img src="/images/main-12.gif" alt="Logo Bearplane" class="hero-gif">
 
   <div class="section">
-    <div class="trailer-button">
+<!--     <div class="trailer-button">
       <a href="https://youtu.be/3JW6-kAru64" class="btn" target="_blank">▶ Regarder la bande-annonce</a>
-    </div>
+    </div> -->
 
     <p class="intro-paragraph">
       <em><strong>Envolez-vous aux commandes d’un ours-fusée dans <em>Bearplane</em> : une aventure loufoque et pleine d’action, librement inspirée de la légendaire histoire de Wojtek l’ours. Affrontez des ennemis retors grâce à des capacités délirantes, des en-cas à fusion nucléaire et un joyeux chaos aérien.</strong></em>
