--- a/it/index.html
+++ b/it/index.html
@@ -51,9 +51,9 @@
   <img src="/images/main-12.gif" alt="Logo di Bearplane" class="hero-gif">
 
   <div class="section">
-    <div class="trailer-button">
+<!--     <div class="trailer-button">
       <a href="https://youtu.be/3JW6-kAru64" class="btn" target="_blank">▶ Guarda il trailer</a>
-    </div>
+    </div> -->
     <p class="intro-paragraph">
       <em><strong>Vola nei cieli nei panni di un orso a razzo in Bearplane: un’avventura folle e ricca di azione, liberamente ispirata alla leggenda di Wojtek l’orso. Sconfiggi nemici insidiosi con abilità fuori di testa, snack nucleari e un caos aereo totale.</strong></em>
     </p>
