--- a/ja/index.html
+++ b/ja/index.html
@@ -51,9 +51,9 @@
   <img src="/images/main-12.gif" alt="Bearplane ロゴ" class="hero-gif">
 
   <div class="section">
-    <div class="trailer-button">
+<!--     <div class="trailer-button">
       <a href="https://youtu.be/3JW6-kAru64" class="btn" target="_blank">▶ トレーラーを見る</a>
-    </div>
+    </div> -->
     <p class="intro-paragraph">
       <em><strong>ロケット駆動のクマとなって空を駆ける『Bearplane』：ウオイテク伝説に自由にインスパイアされた、ド派手でアクション満載のアドベンチャー。狂気のスキル、核スナック、空の大混乱で狡猾な敵を打ち倒せ。</strong></em>
     </p>
