--- a/pl/index.html
+++ b/pl/index.html
@@ -51,9 +51,9 @@
   <img src="/images/main-12.gif" alt="Logo Bearplane" class="hero-gif">
 
   <div class="section">
-    <div class="trailer-button">
+<!--     <div class="trailer-button">
       <a href="https://youtu.be/3JW6-kAru64" class="btn" target="_blank">▶ Zobacz zwiastun</a>
-    </div>
+    </div> -->
     <p class="intro-paragraph">
       <em><strong>Leć w przestworza jako rakietowy niedźwiedź w Bearplane: zwariowana, pełna akcji przygoda luźno inspirowana prawdziwą historią niedźwiedzia Wojtka. Pokonuj podstępnych wrogów szalonymi zdolnościami, nuklearnymi przekąskami i totalnym chaosem w powietrzu.</strong></em>
     </p>
