--- a/pt/index.html
+++ b/pt/index.html
@@ -51,9 +51,9 @@
   <img src="/images/main-12.gif" alt="Logo do Bearplane" class="hero-gif">
 
   <div class="section">
-    <div class="trailer-button">
+<!--     <div class="trailer-button">
       <a href="https://youtu.be/3JW6-kAru64" class="btn" target="_blank">▶ Assistir trailer</a>
-    </div>
+    </div> -->
     <p class="intro-paragraph">
       <em><strong>Voe como um urso a foguete em Bearplane: uma aventura maluca e cheia de ação, livremente inspirada na lendária história de Wojtek, o urso. Derrote inimigos traiçoeiros com habilidades insanas, lanches nucleares e muito caos aéreo.</strong></em>
     </p>
