--- a/index.html
+++ b/index.html
@@ -157,8 +157,8 @@
 <div class="section">
   <h2>About Us</h2>
   <p>Founded in 1940, in a universe where bears can fly, <strong>Atomic Mills</strong> took flight with one radical mission: <em>win the war... with breakfast</em>.</p>
-  <p>As Allied forces searched for an edge, visionary food engineer <strong>Dean Lockhart</strong> answered the call. Backed by a team of barely-certified scientists and a loose understanding of radiation, Lockhart pioneered <strong>nuclear-infused food products</strong> designed to supercharge soldiers with <em>unmatched speed, strength, and spirit</em>.</p>
-  <p>From the launch of <em>Flappy Flakes Cereal</em> to the sticky brilliance of <em>Nukey Nectar</em> (harvested from radioactive bees) Atomic Mills turned science into sustenance—and breakfast into a battleground.</p>
+  <p>As Allied forces searched for an edge, visionary food engineer Dean Lockhart answered the call. Backed by a team of barely-certified scientists and a loose understanding of radiation, Lockhart pioneered nuclear-infused food products designed to supercharge soldiers with unmatched speed, strength, and spirit.</p>
+  <p>From the launch of <em>Flappy Flakes Cereal</em> to the sticky brilliance of <em>Nukey Nectar</em> (harvested from radioactive bees) Atomic Mills turned science into sustenance and breakfast into a battleground.</p>
   <p>Born on the battlefield, embraced at the breakfast table. And while the world keeps spinning, our mission stays the same:</p>
   <p><strong>To fuel every morning with sunshine, science, and a wholesome blast of atomic innovation.</strong></p>
 </div>
