--- a/index.html
+++ b/index.html
@@ -154,6 +154,16 @@
   </div>
 </a>
 
+<a href="atomic-shirt.html" class="bearplane-card">
+  <div class="bearplane-card-content">
+    <img src="images/atomic-shirt-preview.png" alt="Atomic Mills T-Shirt Preview" class="bearplane-image">
+    <div class="bearplane-text">
+      <h2>New Drop: Official Atomic Mills T-Shirt</h2>
+      <p>Celebrate 85 years of questionable science and delicious radiation with the first-ever Atomic Mills tee! Whether you're fueling up on Flappy Flakes or just radiating vintage style, this shirt's your uniform of choice.</p>
+    </div>
+  </div>
+</a>
+
 <div class="section">
   <h2>About Us</h2>
   <p>Founded in 1940, in a universe where bears can fly, <strong>Atomic Mills</strong> took flight with one radical mission: <em>win the war... with breakfast</em>.</p>
