--- a/atomic-shirt.html
+++ b/atomic-shirt.html
@@ -1,63 +1,87 @@
-<html lang="en">
+<!DOCTYPE html>
+<html>
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Atomic Mills T-Shirt</title>
-  <link rel="stylesheet" href="styles.css"> <!-- Link to your external CSS -->
   <style>
     body {
-      font-family: Arial, sans-serif;
-      background-color: #f9f9f9;
-      padding: 20px;
+      background: #fffbe6;
+      font-family: monospace;
       text-align: center;
+      padding: 40px;
+      margin: 0;
     }
-    .shirt-container {
+
+    .logo {
+      max-width: 300px;
+      margin-bottom: 20px;
+    }
+
+    h1 {
+      color: darkred;
+    }
+
+    .shirt-section {
       max-width: 700px;
-      margin: auto;
-      background: white;
-      padding: 30px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
-      border-radius: 12px;
+      margin: 0 auto;
     }
+
     .shirt-images {
       display: flex;
-      gap: 10px;
       justify-content: center;
-      margin-bottom: 20px;
+      gap: 20px;
+      flex-wrap: wrap;
+      margin: 30px 0;
     }
+
     .shirt-images img {
-      max-width: 45%;
-      border-radius: 10px;
+      width: 100%;
+      max-width: 300px;
+      height: auto;
+      border: 1px solid #ccc;
+      border-radius: 6px;
     }
+
     .sold-out {
-      font-size: 1.5rem;
-      color: red;
-      margin-bottom: 20px;
+      font-size: 1.4em;
+      color: darkred;
+      font-weight: bold;
+      margin: 20px 0;
     }
+
     .notify-button {
-      padding: 12px 24px;
-      font-size: 1rem;
-      background-color: #000;
-      color: #fff;
+      background-color: darkred;
+      color: white;
       border: none;
+      padding: 12px 24px;
+      font-size: 1em;
+      font-weight: bold;
       border-radius: 6px;
       cursor: pointer;
-      transition: background 0.3s;
+      transition: background-color 0.2s ease;
     }
+
     .notify-button:hover {
-      background-color: #333;
+      background-color: #a30000;
     }
   </style>
 </head>
 <body>
-  <div class="shirt-container">
-    <h1>Atomic Mills T-Shirt</h1>
+
+  <img src="atomic-mills-logo-5.png" alt="Atomic Mills Logo" class="logo">
+
+  <div class="shirt-section">
+    <h1>Official Atomic Mills T-Shirt</h1>
+    <p>Celebrate 85 years of questionable science and delicious radiation with our first-ever Atomic Mills tee.</p>
+
     <div class="shirt-images">
-      <img src="images/atomic-shirt-front.png" alt="Front of Atomic Mills T-Shirt">
-      <img src="images/atomic-shirt-preview.png" alt="Back of Atomic Mills T-Shirt">
+      <img src="images/shirt-front.png" alt="Atomic Mills Shirt Front">
+      <img src="images/atomic-shirt-preview.png" alt="Atomic Mills Shirt">
     </div>
+
     <div class="sold-out">SOLD OUT</div>
     <button class="notify-button">Notify Me</button>
   </div>
+
 </body>
 </html>
