--- a/atomic-shirt.html
+++ b/atomic-shirt.html
@@ -76,7 +76,7 @@
 
     <div class="shirt-images">
       <img src="images/shirt-front.png" alt="Atomic Mills Shirt Front">
-      <img src="images/atomic-shirt-preview.png" alt="Atomic Mills Shirt">
+      <img src="ht-matt.png" alt="Atomic Mills Shirt">
     </div>
 
     <div class="sold-out">SOLD OUT</div>
