--- a/atomic-shirt.html
+++ b/atomic-shirt.html
@@ -75,7 +75,7 @@
     <p>Celebrate 85 years of questionable science and delicious radiation with our first-ever Atomic Mills tee.</p>
 
     <div class="shirt-images">
-      <img src="images/shirt-front.png" alt="Atomic Mills Shirt Front">
+      <img src="images/atomic-mills-shirt-front.png" alt="Atomic Mills Shirt Front">
       <img src="ht-matt.png" alt="Atomic Mills Shirt">
     </div>
 
