--- a/atomic-shirt.html
+++ b/atomic-shirt.html
@@ -68,11 +68,13 @@
 </head>
 <body>
 
-  <img src="atomic-mills-logo-5.png" alt="Atomic Mills Logo" class="logo">
+  <a href="https://www.atomicmills.com">
+    <img src="atomic-mills-logo-5.png" alt="Atomic Mills Logo" class="logo">
+  </a>
 
   <div class="shirt-section">
     <h1>Official Atomic Mills T-Shirt</h1>
-    <p>Celebrate 85 years of questionable science and delicious radiation with our first-ever Atomic Mills tee.</p>
+    <p>Celebrate 85 years of questionable science and delicious radiation with our first-ever Atomic Mills tee. Designed for gym rats, breakfast fanatics, and anyone brave enough to microwave uranium.</p>
 
     <div class="shirt-images">
       <img src="images/atomic-mills-shirt-front.png" alt="Atomic Mills Shirt Front">
@@ -81,6 +83,17 @@
 
     <div class="sold-out">SOLD OUT</div>
     <button class="notify-button">Notify Me</button>
+  </div>
+
+  <div class="social-links">
+    <p>Connect with Us:</p>
+    <a href="https://www.atomicmills.com" target="_blank">⌂ Home</a> |
+    <a href="https://www.instagram.com/atomicmillsco/" target="_blank">Instagram</a> |
+    <a href="https://www.linkedin.com/company/atomic-mills" target="_blank">LinkedIn</a> |
+    <a href="https://x.com/AtomicMillsCo" target="_blank">X</a> |
+    <a href="mailto:AtomicMills@aol.com">Email</a> |
+    <a href="blog.html">Blog</a> |
+    <a href="legal.html">Legal</a>
   </div>
 
 </body>
