--- a/atomic-shirt.html
+++ b/atomic-shirt.html
@@ -64,6 +64,16 @@
     .notify-button:hover {
       background-color: #a30000;
     }
+
+    .social-links a {
+      color: darkred;
+      text-decoration: none;
+      font-weight: bold;
+    }
+
+    .social-links a:hover {
+      text-decoration: underline;
+    }
   </style>
 </head>
 <body>
@@ -77,11 +87,10 @@
     <p>Celebrate 85 years of questionable science and delicious radiation with our first-ever Atomic Mills tee. Designed for gym rats, breakfast fanatics, and anyone brave enough to microwave uranium.</p>
 
     <div class="shirt-images">
-      <img src="images/atomic-mills-shirt-front.png" alt="Atomic Mills Shirt Front">
-      <img src="ht-matt.png" alt="Atomic Mills Shirt">
+      <img src="images/atomic-mills-shirt.png" alt="Atomic Mills Shirt Front">
     </div>
 
-    <div class="sold-out">SOLD OUT</div>
+    <div class="sold-out">SOLD OUT. Gosh Darnit</div>
     <button class="notify-button">Notify Me</button>
   </div>
 
