--- a/atomic-shirt.html
+++ b/atomic-shirt.html
@@ -71,6 +71,10 @@
       font-weight: bold;
     }
 
+    .social-links {
+      margin-top: 40px;
+    }
+
     .social-links a:hover {
       text-decoration: underline;
     }
