--- a/atomic-shirt.html
+++ b/atomic-shirt.html
@@ -95,8 +95,10 @@
     </div>
 
     <div class="sold-out">SOLD OUT. Gosh Darnit</div>
-    <button class="notify-button">Notify Me</button>
-  </div>
+      <button class="notify-button" onclick="window.location.href='https://docs.google.com/forms/d/e/1FAIpQLScoabWvf5Awgk7mh83V3ktgwzt3fAqwhzYkI29odklZWPsaaA/viewform?usp=dialog';">
+        Notify Me
+      </button>
+    </div>
 
   <div class="social-links">
     <p>Connect with Us:</p>
