--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
   <h1>Welcome to Atomic Mills</h1>
   <p>Makers of the World’s First Atomic Breakfast</p>
 
-<a href="bearplane.html" class="bearplane-card">
+<!-- <a href="bearplane.html" class="bearplane-card">
   <div class="bearplane-card-content">
     <img src="images/main-12.gif" alt="Bearplane Preview" class="bearplane-image">
     <div class="bearplane-text">
@@ -152,7 +152,7 @@
       <p>After decades of innovation in nuclear-infused food and beverages, Atomic Mills is proud to bring its atomic genius to the world of video games. To celebrate our booming legacy, we’ve created <em>Bearplane</em>—a high-flying tribute to everything we stand for: chaos, courage, and questionable safety standards.</p>
     </div>
   </div>
-</a>
+</a> -->
 
 <a href="atomic-shirt.html" class="bearplane-card">
   <div class="bearplane-card-content">
