--- a/legal.html
+++ b/legal.html
@@ -135,6 +135,62 @@
     <p>Questions about privacy? Email <a href="mailto:m@ttburton.com">m@ttburton.com</a>.</p>
   </div>
 
+  <div class="section">
+    <h2 id="eula">End User License Agreement (EULA)</h2>
+
+    <p><strong>Effective Date:</strong> May 15, 2025</p>
+
+    <p>This End User License Agreement ("Agreement") is between you ("User") and <strong>Matthew Burton</strong>, the sole developer and publisher of <em>Bearplane</em>, a video game available on Steam, the Apple App Store, and Google Play.</p>
+
+    <p>By installing, accessing, or playing <em>Bearplane</em>, you agree to be bound by this Agreement.</p>
+
+    <h3>1. License Grant</h3>
+    <p>Matthew Burton grants you a non-exclusive, non-transferable, revocable license to download, install, and play <em>Bearplane</em> for personal, non-commercial use, subject to the terms of this Agreement.</p>
+
+    <h3>2. Restrictions</h3>
+    <ul>
+      <li>You may not modify, redistribute, sublicense, or sell the game or its assets.</li>
+      <li>You may not use the game in a way that violates applicable law or infringes intellectual property rights.</li>
+      <li>Commercial use (including merchandise or derivative works) requires written consent from Matthew Burton.</li>
+    </ul>
+
+    <h3>3. Modding, Streaming, and Fan Content</h3>
+    <ul>
+      <li>You may create and share mods (once modding is officially supported).</li>
+      <li>You may stream or record gameplay, including monetized content.</li>
+      <li>You may create and share non-commercial fan art. Commercial use requires prior written permission.</li>
+    </ul>
+
+    <h3>4. Platform and Pricing</h3>
+    <ul>
+      <li><strong>Steam:</strong> Paid</li>
+      <li><strong>App Store & Google Play:</strong> Free with optional Full Game unlock</li>
+      <li>Future support planned for additional platforms (e.g., Itch.io)</li>
+    </ul>
+
+    <h3>5. Online Services and Leaderboards</h3>
+    <p><em>Bearplane</em> includes online leaderboards. Internet access is not required for gameplay, but scores will upload when a connection is available.</p>
+    <p>No personal data is collected or transmitted by the game.</p>
+
+    <h3>6. Intellectual Property</h3>
+    <p>All content in <em>Bearplane</em>—including characters, artwork, music, and game mechanics—is the exclusive property of Matthew Burton and protected under applicable copyright and intellectual property laws.</p>
+
+    <h3>7. Disclaimer of Warranty</h3>
+    <p><em>Bearplane</em> is provided "as is" without warranties of any kind. Matthew Burton does not guarantee uninterrupted or error-free operation of the game.</p>
+
+    <h3>8. Limitation of Liability</h3>
+    <p>Matthew Burton shall not be liable for any indirect, incidental, or consequential damages arising from your use of <em>Bearplane</em>.</p>
+
+    <h3>9. Termination</h3>
+    <p>This license terminates automatically if you violate any terms of this Agreement. Upon termination, you must delete all copies of the game in your possession.</p>
+
+    <h3>10. Governing Law</h3>
+    <p>This Agreement is governed by the laws of the State of Missouri, USA, without regard to its conflict of law provisions.</p>
+
+    <h3>11. Contact</h3>
+    <p>For questions or permission requests, contact Matthew Burton at <a href="mailto:atomicmills@aol.com">atomicmills@aol.com</a>.</p>
+  </div>
+
   <footer>
     <p>© 2025 Bearplane by Matthew Burton. All rights reserved.</p>
   </footer>
