--- a/legal.html
+++ b/legal.html
@@ -188,7 +188,7 @@
     <p>This Agreement is governed by the laws of the State of Missouri, USA, without regard to its conflict of law provisions.</p>
 
     <h3>11. Contact</h3>
-    <p>For questions or permission requests, contact Matthew Burton at <a href="mailto:atomicmills@aol.com">atomicmills@aol.com</a>.</p>
+    <p>For questions or permission requests, contact Matthew Burton at <a href="mailto:m@ttburton.com">m@ttburton.com</a>.</p>
   </div>
 
   <footer>
